@@ -607,6 +607,9 @@ if ($LASTEXITCODE -ne 0) {
     throw "R148 paging/resistance tests failed with exit code $LASTEXITCODE"
 }
 
+& $java --add-modules jdk.httpserver -ea -classpath $runtimeClasspath com.inigmasgames.persistentnpcs.stats.R149PersistentVanillaStatsTest
+if ($LASTEXITCODE -ne 0) { throw "R149 persistent vanilla stats tests failed with exit code $LASTEXITCODE" }
+
 & $java --add-modules jdk.httpserver -ea -classpath $runtimeClasspath com.inigmasgames.persistentnpcs.R147NpcProfileRepairTest
 if ($LASTEXITCODE -ne 0) {
     throw "R147 Profile repair tests failed with exit code $LASTEXITCODE"
